<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/mainBG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                tools:context=".LoginActivity">
  <ImageView android:id="@+id/logoImage"
             android:src="@drawable/logo"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginBottom="40dp"
             android:layout_above="@+id/editFields" />

  <LinearLayout android:id="@+id/editFields"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <EditText android:id="@+id/editText1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/username_text"
              android:padding="18dp"
              android:background="@drawable/edittextstyle1"
              android:textColorHint="#949494"
              android:textColor="#FFFFFF" />
    <EditText android:id="@+id/editText2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/password_text"
              android:padding="18dp"
              android:layout_marginTop="20dp"
              android:background="@drawable/edittextstyle1"
              android:textColorHint="#949494"
              android:textColor="#FFFFFF" />
  </LinearLayout>
  <Button android:id="@+id/button1"
          android:layout_below="@+id/editFields"
          android:layout_marginTop="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="login"
          android:text="@string/login_text"
          android:background="@drawable/buttonstyle1"
          android:textColor="#FFFFFF"/>
  <TextView android:id="@+id/signup"
            android:text="Not a member? Sign up today."
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
  <LinearLayout android:id="@+id/signUpButtonsLayout"
                android:orientation="horizontal"
                android:layout_below="@+id/signup"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
    <ImageView android:id="@+id/facebookbutton"
               android:src="@drawable/fb"
               android:layout_width="60dp"
               android:layout_height="60dp" />
    <Space android:layout_width="20dp"
           android:layout_height="10dp" />
    <ImageView android:id="@+id/twitterbutton"
               android:src="@drawable/twitter"
               android:layout_width="60dp"
               android:layout_height="60dp" />
  </LinearLayout>
</RelativeLayout>
